--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 
 <header>
-    <div class="logo">A<span>N</span></div>
+<div class="logo">
+    <img src="logo.jpg"AN Logo">
+</div>
     <nav>
         <a href="#home">Home</a>
         <a href="#projects">Work</a>
@@ -28,7 +30,7 @@
         <div class="hero-layout">
             <div class="hero-text" data-aos="fade-right">
                 <div class="hero-badge">Available for 2026 Projects</div>
-                <h1>Digital <br><span>Architect</span></h1>
+                <h1>Website<br><span>Developer</span></h1>
                 <p>Halo, saya <strong>Anugrah</strong>. Saya merancang dan membangun infrastruktur web yang elegan, cepat, dan berkelas dunia.</p>
                 <div class="cta-group">
                     <a href="#projects" class="btn-primary">View Portfolio</a>
@@ -85,71 +87,85 @@
 
         <!-- PROJECT 01 -->
         <div class="project-item" data-aos="fade-up">
-            <div class="p-img">
-                <img src="project1.jpg" alt="Coffee Project">
-                <div class="p-overlay">
-                    <a href="https://nugrahn0123.github.io/Sistem-Coffee/" target="_blank">
-                        View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    </a>
+            <div class="laptop-mockup">
+                <div class="laptop-screen">
+                    <img src="project1.jpg" alt="Sistem Coffee Preview">
+                    <div class="p-overlay">
+                        <a href="https://nugrahn0123.github.io/Sistem-Coffee/" target="_blank">
+                            View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+                    </div>
                 </div>
+                <div class="laptop-base"></div>
             </div>
+
             <div class="p-info">
                 <span>01. Web Development</span>
-                <h3>Coffee Shop Elite</h3>
+                <h3>SISTEM Coffee</h3>
             </div>
         </div>
 
         <!-- PROJECT 02 -->
         <div class="project-item" data-aos="fade-up" data-aos-delay="100">
-            <div class="p-img">
-                <img src="project2.jpg" alt="Beauty Clinic Project">
-                <div class="p-overlay">
-                    <a href="https://nugrahn0123.github.io/Klinik-Preview/" target="_blank">
-                        View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    </a>
+            <div class="laptop-mockup">
+                <div class="laptop-screen">
+                    <img src="project2.jpg" alt="Beauty Clinic Preview">
+                    <div class="p-overlay">
+                        <a href="https://nugrahn0123.github.io/Klinik-Preview/" target="_blank">
+                            View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+                    </div>
                 </div>
+                <div class="laptop-base"></div>
             </div>
+
             <div class="p-info">
-                <span>02. Landing Page</span>
-                <h3>Beauty Clinic Landing</h3>
+                <span>02. Web Development</span>
+                <h3>Beauty Clinic Website</h3>
             </div>
         </div>
 
         <!-- PROJECT 03 -->
-        <div class="project-item" data-aos="fade-up">
-            <div class="p-img">
-                <img src="project3.jpg" alt="Corporate Website">
-                <div class="p-overlay">
-                    <a href="https://nugrahn0123.github.io/Preview-Resto/" target="_blank">
-                        View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    </a>
+        <div class="project-item" data-aos="fade-up" data-aos-delay="200">
+            <div class="laptop-mockup">
+                <div class="laptop-screen">
+                    <img src="project3.jpg" alt="Restaurant Website Preview">
+                    <div class="p-overlay">
+                        <a href="https://nugrahn0123.github.io/Preview-Resto/" target="_blank">
+                            View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+                    </div>
                 </div>
+                <div class="laptop-base"></div>
             </div>
+
             <div class="p-info">
-                <span>03. Company Profile</span>
+                <span>03. Web Development</span>
                 <h3>Restaurant Website</h3>
             </div>
         </div>
 
         <!-- PROJECT 04 -->
-        <div class="project-item" data-aos="fade-up" data-aos-delay="100">
-            <div class="p-img">
-                <img src="project4.jpg" alt="Luxury Branding Website">
-                <div class="p-overlay">
-                    <a href="https://nugrahn0123.github.io/Preview-Konsultan/" target="_blank">
-                        View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    </a>
+        <div class="project-item" data-aos="fade-up" data-aos-delay="300">
+            <div class="laptop-mockup">
+                <div class="laptop-screen">
+                    <img src="project4.jpg" alt="Consulting Website Preview">
+                    <div class="p-overlay">
+                        <a href="https://nugrahn0123.github.io/Preview-Konsultan/" target="_blank">
+                            View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+                    </div>
                 </div>
+                <div class="laptop-base"></div>
             </div>
+
             <div class="p-info">
-                <span>04. Premium UI Design</span>
+                <span>04. Web Development</span>
                 <h3>Consulting Website</h3>
             </div>
         </div>
 
     </div>
-    
-    
 </section>
 
 <div class="section-divider"></div>
@@ -211,6 +227,34 @@
         retina_detect: true
     });
 </script>
+<footer class="footer">
+    <div class="footer-container">
 
+        <div class="footer-brand">
+            <img src="logo.jpg"AN Logo">
+            <p>
+                Building elegant, high-performance websites for modern brands.
+            </p>
+        </div>
+
+        <div class="footer-links">
+            <h4>Navigation</h4>
+            <a href="#home">Home</a>
+            <a href="#projects">Projects</a>
+            <a href="https://wa.me/6281312194625">Hire Me</a>
+        </div>
+
+        <div class="footer-contact">
+            <h4>Contact</h4>
+            <p>Email: anugrahn935@gmail.com</p>
+            <p>WhatsApp: +62 813-1219-4625</p>
+        </div>
+
+    </div>
+
+    <div class="footer-bottom">
+        © 2026 Anugrah — All Rights Reserved.
+    </div>
+</footer>
 </body>
 </html>
