--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p data-i18n="p1Desc">Sistem manajemen kafe lengkap dengan fitur pesanan online, menu interaktif, dan integrasi pembayaran. Dibangun menggunakan HTML, CSS, JavaScript, dan local storage untuk simulasi database. Dioptimalkan untuk performa tinggi dan responsif di semua device.</p>
                     <p data-i18n="techLabel"><strong>Teknologi:</strong></p>
                     <ul>
-                        <li>HTML5</li><li>CSS3</li><li>JavaScript</li><li>Responsive Design</li>
+                        <li>HTML5</li><li>CSS3</li><li>JavaScript</li><li>Assisten Chat AI</li><li>Responsive Design</li>
                     </ul>
                     <p data-i18n="p1Result"><strong>Hasil:</strong> Meningkatkan efisiensi operasional kafe dan pengalaman pelanggan.</p>
                 </div>
