--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <span>01. Web Development</span>
                 <h3>SISTEM Coffee</h3>
                 <div class="project-description">
-                    <p data-i18n="p1Desc">Sistem manajemen kafe lengkap dengan fitur pesanan online, menu interaktif, dan integrasi pembayaran. Dibangun menggunakan HTML, CSS, JavaScript, dan local storage untuk simulasi database. Dioptimalkan untuk performa tinggi dan responsif di semua device.</p>
+                    <p data-i18n="p1Desc">Sistem manajemen kafe lengkap dengan fitur reservasi online, menu interaktif. Dioptimalkan untuk performa tinggi dan responsif di semua device.</p>
                     <p data-i18n="techLabel"><strong>Teknologi:</strong></p>
                     <ul>
                         <li>HTML5</li><li>CSS3</li><li>JavaScript</li><li>Assisten Chat AI</li><li>Responsive Design</li>
