--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="laptop-screen">
                     <img src="project1.jpg" alt="Sistem Coffee Preview">
                     <div class="p-overlay">
-                        <a href="https://nugrahn0123.github.io/Sistem-Coffee/" target="_blank" data-i18n="viewDetailsBtn">
+                        <a href="https://sistem-coffee.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
                             Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
                     </div>
@@ -130,7 +130,7 @@
                 <div class="laptop-screen">
                     <img src="project2.jpg" alt="Beauty Clinic Preview">
                     <div class="p-overlay">
-                        <a href="https://nugrahn0123.github.io/Klinik-Preview/" target="_blank" data-i18n="viewDetailsBtn">
+                        <a href="https://klinik-preview.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
                             Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
                     </div>
@@ -156,7 +156,7 @@
                 <div class="laptop-screen">
                     <img src="project3.jpg" alt="Restaurant Website Preview">
                     <div class="p-overlay">
-                        <a href="https://nugrahn0123.github.io/Preview-Resto/" target="_blank" data-i18n="viewDetailsBtn">
+                        <a href="https://preview-resto.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
                             Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
                     </div>
@@ -182,7 +182,7 @@
                 <div class="laptop-screen">
                     <img src="project4.jpg" alt="Consulting Website Preview">
                     <div class="p-overlay">
-                        <a href="https://nugrahn0123.github.io/Preview-Konsultan/" target="_blank" data-i18n="viewDetailsBtn">
+                        <a href="https://preview-konsultan.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
                             Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
                     </div>
