revisi pengalaman n bug mobile

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <h2 class="section-title" data-aos="fade-up" data-i18n="aboutTitle">About <span>Me</span></h2>
         <div class="about-content">
             <div class="about-text" data-aos="fade-right">
-                <p data-i18n="aboutP1">Halo! Saya Anugrah, seorang Website Developer yang passionate dalam menciptakan pengalaman digital yang luar biasa. Dengan pengalaman lebih dari 3 tahun di bidang development, saya telah membantu berbagai bisnis dari startup hingga perusahaan besar membangun website yang tidak hanya cantik, tapi juga efektif dalam menjangkau audiens.</p>
-                <p data-i18n="aboutP2">Mulai dari coding sederhana sejak 2020, saya telah mengembangkan keterampilan di berbagai teknologi web modern. Saya percaya bahwa setiap proyek adalah kesempatan untuk belajar dan berinovasi, dengan fokus utama pada kualitas, performa, dan kepuasan klien.</p>
+                <p data-i18n="aboutP1">Halo! Saya Anugrah, seorang Website Developer yang passionate dalam menciptakan pengalaman digital yang luar biasa. Sejak 2022 hingga 2026, saya terus belajar dan berkembang melalui berbagai proyek nyata untuk membangun website yang tidak hanya menarik, tetapi juga efektif mencapai tujuan bisnis.</p>
+                <p data-i18n="aboutP2">Perjalanan saya dimulai dari dasar-dasar programming pada 2022, lalu berkembang ke teknologi web modern seperti HTML, CSS, dan JavaScript. Saya percaya setiap proyek adalah kesempatan untuk belajar dan berinovasi, dengan fokus utama pada kualitas, performa, dan kepuasan klien.</p>
                 <p data-i18n="aboutP3">Di luar coding, saya suka membaca tentang teknologi terbaru dan berkontribusi di komunitas developer. Mari kita bangun sesuatu yang hebat bersama!</p>
                 <div class="about-stats">
-                    <div data-i18n="stat1"><strong>3+</strong> Tahun Pengalaman</div>
+                    <div data-i18n="stat1"><strong>4+</strong> Tahun Pengalaman</div>
                     <div data-i18n="stat2"><strong>50+</strong> Proyek Selesai</div>
                     <div data-i18n="stat3"><strong>100%</strong> Klien Puas</div>
                 </div>
@@ -303,22 +303,22 @@
         <h2 class="section-title" data-aos="fade-up" data-i18n="expTitle">Pengalaman <span>Kerja</span></h2>
         <div class="experience-timeline">
             <div class="experience-item" data-aos="fade-right">
-                <div class="experience-date" data-i18n="expDate1">2023 - Present</div>
+                <div class="experience-date" data-i18n="expDate1">2024 - Present</div>
                 <div class="experience-content">
                     <h3>Freelance Web Developer</h3>
                     <p>Independent Contractor</p>
                     <ul>
-                        <li data-i18n="exp1Li1">Membangun 50+ website untuk berbagai industri</li>
+                        <li data-i18n="exp1Li1">Membangun website untuk berbagai kebutuhan bisnis dan personal branding</li>
                         <li data-i18n="exp1Li2">Kolaborasi dengan klien untuk memahami kebutuhan bisnis</li>
                         <li data-i18n="exp1Li3">Optimasi performa dan SEO untuk hasil maksimal</li>
                     </ul>
                 </div>
             </div>
             <div class="experience-item" data-aos="fade-left">
-                <div class="experience-date">2021 - 2023</div>
+                <div class="experience-date">2022 - 2024</div>
                 <div class="experience-content">
-                    <h3>Junior Web Developer</h3>
-                    <p>Tech Startup Indonesia</p>
+                    <h3>Web Developer Learner</h3>
+                    <p>Belajar Mandiri & Proyek Personal</p>
                     <ul>
                         <li data-i18n="exp2Li1">Pengembangan frontend untuk aplikasi web</li>
                         <li data-i18n="exp2Li2">Kerja tim dalam proyek e-commerce</li>
@@ -327,10 +327,10 @@
                 </div>
             </div>
             <div class="experience-item" data-aos="fade-right">
-                <div class="experience-date">2020 - 2021</div>
+                <div class="experience-date">2022 - 2023</div>
                 <div class="experience-content">
-                    <h3>Web Development Intern</h3>
-                    <p>Digital Agency</p>
+                    <h3>Programming Foundation</h3>
+                    <p>Self-Learning Journey</p>
                     <ul>
                         <li data-i18n="exp3Li1">Assist dalam pembuatan landing page</li>
                         <li data-i18n="exp3Li2">Belajar HTML, CSS, dan JavaScript dasar</li>
@@ -395,10 +395,10 @@
             chatMe: '<i class="fa-brands fa-whatsapp"></i> Chat Saya',
             verifiedDev: '<i class="fa-solid fa-check"></i> <span>Developer Terverifikasi</span>',
             aboutTitle: 'About <span>Me</span>',
-            aboutP1: 'Halo! Saya Anugrah, seorang Website Developer yang passionate dalam menciptakan pengalaman digital yang luar biasa. Dengan pengalaman lebih dari 3 tahun di bidang development, saya telah membantu berbagai bisnis dari startup hingga perusahaan besar membangun website yang tidak hanya cantik, tapi juga efektif dalam menjangkau audiens.',
-            aboutP2: 'Mulai dari coding sederhana sejak 2020, saya telah mengembangkan keterampilan di berbagai teknologi web modern. Saya percaya bahwa setiap proyek adalah kesempatan untuk belajar dan berinovasi, dengan fokus utama pada kualitas, performa, dan kepuasan klien.',
+            aboutP1: 'Halo! Saya Anugrah, seorang Website Developer yang passionate dalam menciptakan pengalaman digital yang luar biasa. Sejak 2022 hingga 2026, saya terus belajar dan berkembang melalui berbagai proyek nyata untuk membangun website yang tidak hanya menarik, tetapi juga efektif mencapai tujuan bisnis.',
+            aboutP2: 'Perjalanan saya dimulai dari dasar-dasar programming pada 2022, lalu berkembang ke teknologi web modern seperti HTML, CSS, dan JavaScript. Saya percaya bahwa setiap proyek adalah kesempatan untuk belajar dan berinovasi, dengan fokus utama pada kualitas, performa, dan kepuasan klien.',
             aboutP3: 'Di luar coding, saya suka membaca tentang teknologi terbaru dan berkontribusi di komunitas developer. Mari kita bangun sesuatu yang hebat bersama!',
-            stat1: '<strong>3+</strong> Tahun Pengalaman',
+            stat1: '<strong>4+</strong> Tahun Pengalaman',
             stat2: '<strong>50+</strong> Proyek Selesai',
             stat3: '<strong>100%</strong> Klien Puas',
             expertiseTitle: 'Keahlian <span>Saya</span>',
@@ -427,8 +427,8 @@
             testi3: '"Kerja sama yang menyenangkan! Website restoran kami sekarang responsif dan menarik banyak pelanggan baru."',
             skillsTitle: 'Keterampilan <span>Saya</span>',
             expTitle: 'Pengalaman <span>Kerja</span>',
-            expDate1: '2023 - Present',
-            exp1Li1: 'Membangun 50+ website untuk berbagai industri',
+            expDate1: '2024 - Sekarang',
+            exp1Li1: 'Membangun website untuk berbagai kebutuhan bisnis dan personal branding',
             exp1Li2: 'Kolaborasi dengan klien untuk memahami kebutuhan bisnis',
             exp1Li3: 'Optimasi performa dan SEO untuk hasil maksimal',
             exp2Li1: 'Pengembangan frontend untuk aplikasi web',
@@ -459,10 +459,10 @@
             chatMe: '<i class="fa-brands fa-whatsapp"></i> Chat Me',
             verifiedDev: '<i class="fa-solid fa-check"></i> <span>Verified Developer</span>',
             aboutTitle: 'About <span>Me</span>',
-            aboutP1: 'Hello! I am Anugrah, a Website Developer passionate about creating exceptional digital experiences. With over 3 years of development experience, I have helped various businesses from startups to large enterprises build websites that are not only beautiful but also effective in reaching audiences.',
-            aboutP2: 'Starting from simple coding since 2020, I have developed skills in various modern web technologies. I believe every project is an opportunity to learn and innovate, with a primary focus on quality, performance, and client satisfaction.',
+            aboutP1: 'Hello! I am Anugrah, a Website Developer passionate about creating exceptional digital experiences. From 2022 to 2026, I have continuously grown through real projects to build websites that are not only visually appealing but also effective in achieving business goals.',
+            aboutP2: 'My journey started with programming fundamentals in 2022, then evolved into modern web technologies such as HTML, CSS, and JavaScript. I believe every project is an opportunity to learn and innovate, with a primary focus on quality, performance, and client satisfaction.',
             aboutP3: 'Outside of coding, I enjoy reading about the latest tech and contributing to developer communities. Let\'s build something great together!',
-            stat1: '<strong>3+</strong> Years Experience',
+            stat1: '<strong>4+</strong> Years Experience',
             stat2: '<strong>50+</strong> Projects Completed',
             stat3: '<strong>100%</strong> Satisfied Clients',
             expertiseTitle: 'My <span>Expertise</span>',
@@ -491,8 +491,8 @@
             testi3: '"A pleasure to work with! Our restaurant website is now responsive and attracts many new customers."',
             skillsTitle: 'My <span>Skills</span>',
             expTitle: 'Work <span>Experience</span>',
-            expDate1: '2023 - Present',
-            exp1Li1: 'Built 50+ websites for various industries',
+            expDate1: '2024 - Present',
+            exp1Li1: 'Built websites for business needs and personal branding',
             exp1Li2: 'Collaborated with clients to understand business needs',
             exp1Li3: 'Optimized performance and SEO for maximum results',
             exp2Li1: 'Frontend development for web applications',
