--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header>
     <div class="logo">
-        <img src="logo.jpg" alt="AN Logo">
+        <img src="img/logo.jpg" alt="AN Logo">
     </div>
     <nav>
         <a href="#home" data-i18n="navHome">Beranda</a>
@@ -39,7 +39,7 @@
             </div>
             <div class="hero-image-wrapper" data-aos="zoom-in" data-aos-delay="200">
                 <div class="image-border">
-                    <img src="foto.jpg" alt="Anugrah" class="profile-img">
+                    <img src="img/foto.jpg" alt="Anugrah" class="profile-img">
                 </div>
                 <div class="floating-card" data-i18n="verifiedDev">
                     <i class="fa-solid fa-check"></i> <span>Developer Terverifikasi</span>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="about-image" data-aos="fade-left">
-                <img src="foto.jpg" alt="Anugrah">
+                <img src="img/foto.jpg" alt="Anugrah">
             </div>
         </div>
     </div>
@@ -102,7 +102,7 @@
         <div class="project-item" data-aos="fade-up">
             <div class="laptop-mockup">
                 <div class="laptop-screen">
-                    <img src="project1.jpg" alt="Sistem Coffee Preview">
+                    <img src="/img/project1.jpg" alt="Sistem Coffee Preview">
                     <div class="p-overlay">
                         <a href="https://sistem-coffee.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
                             Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -128,7 +128,7 @@
         <div class="project-item" data-aos="fade-up" data-aos-delay="100">
             <div class="laptop-mockup">
                 <div class="laptop-screen">
-                    <img src="project2.jpg" alt="Beauty Clinic Preview">
+                    <img src="/img/project2.jpg" alt="Beauty Clinic Preview">
                     <div class="p-overlay">
                         <a href="https://klinik-preview.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
                             Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -150,58 +150,10 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="project-item" data-aos="fade-up" data-aos-delay="200">
-            <div class="laptop-mockup">
-                <div class="laptop-screen">
-                    <img src="project3.jpg" alt="Restaurant Website Preview">
-                    <div class="p-overlay">
-                        <a href="https://preview-resto.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
-                            Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="laptop-base"></div>
-            </div>
-            <div class="p-info">
-                <span>03. Web Development</span>
-                <h3>Restaurant Website</h3>
-                <div class="project-description">
-                    <p data-i18n="p3Desc">Website restoran dengan menu digital, galeri makanan, dan sistem reservasi. Fokus pada pengalaman pengguna yang intuitif dan loading cepat untuk meningkatkan traffic.</p>
-                    <p data-i18n="techLabel"><strong>Teknologi:</strong></p>
-                    <ul>
-                        <li>HTML5</li><li>CSS3</li><li>JavaScript</li><li>Responsive Grid</li>
-                    </ul>
-                    <p data-i18n="p3Result"><strong>Hasil:</strong> Meningkatkan reservasi online dan engagement pelanggan.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="project-item" data-aos="fade-up" data-aos-delay="300">
-            <div class="laptop-mockup">
-                <div class="laptop-screen">
-                    <img src="project4.jpg" alt="Consulting Website Preview">
-                    <div class="p-overlay">
-                        <a href="https://preview-konsultan.vercel.app/" target="_blank" data-i18n="viewDetailsBtn">
-                            Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="laptop-base"></div>
-            </div>
-            <div class="p-info">
-                <span>04. Web Development</span>
-                <h3>Consulting Website</h3>
-                <div class="project-description">
-                    <p data-i18n="p4Desc">Website konsultasi bisnis dengan landing page yang persuasif, form kontak, dan showcase expertise. Dirancang untuk konversi tinggi dengan CTA yang jelas.</p>
-                    <p data-i18n="techLabel"><strong>Teknologi:</strong></p>
-                    <ul>
-                        <li>HTML5</li><li>CSS3</li><li>JavaScript</li><li>Form Validation</li>
-                    </ul>
-                    <p data-i18n="p4Result"><strong>Hasil:</strong> Meningkatkan lead generation dan inquiry dari calon klien.</p>
-                </div>
-            </div>
-        </div>
+    <div class="projects-actions" data-aos="fade-up" data-aos-delay="150">
+        <a href="project.html" class="btn-primary" data-i18n="viewAllProjects">Lihat Semua / View All</a>
     </div>
 
     <div class="section-divider"></div>
@@ -359,7 +311,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-brand">
-            <img src="logo.jpg" alt="AN Logo">
+            <img src="img/logo.jpg" alt="AN Logo">
             <p data-i18n="footerBrandText">Membangun website yang elegan dan berperforma tinggi untuk brand modern.</p>
         </div>
         <div class="footer-links">
@@ -407,6 +359,7 @@
             exp3Desc: 'Setiap layout dirancang untuk mendorong tindakan: booking, konsultasi, atau pembelian.',
             projectsTitle: 'Karya <span>Terpilih</span>',
             viewDetailsBtn: 'Lihat Detail <i class="fa-solid fa-arrow-up-right-from-square"></i>',
+            viewAllProjects: 'Lihat Semua / View All',
             p1Desc: 'Sistem manajemen kafe lengkap dengan fitur pesanan online, menu interaktif, dan integrasi pembayaran. Dibangun menggunakan HTML, CSS, JavaScript, dan local storage untuk simulasi database. Dioptimalkan untuk performa tinggi dan responsif di semua device.',
             techLabel: '<strong>Teknologi:</strong>',
             p1Result: '<strong>Hasil:</strong> Meningkatkan efisiensi operasional kafe dan pengalaman pelanggan.',
@@ -471,6 +424,7 @@
             exp3Desc: 'Every layout is designed to drive action: bookings, consultations, or purchases.',
             projectsTitle: 'Selected <span>Works</span>',
             viewDetailsBtn: 'View Details <i class="fa-solid fa-arrow-up-right-from-square"></i>',
+            viewAllProjects: 'View All Projects',
             p1Desc: 'A complete cafe management system with online ordering, interactive menus, and payment integration. Built using HTML, CSS, JavaScript, and local storage for database simulation. Optimized for high performance and fully responsive across all devices.',
             techLabel: '<strong>Technologies:</strong>',
             p1Result: '<strong>Result:</strong> Improved cafe operational efficiency and customer experience.',
